--- a/index.html
+++ b/index.html
@@ -3,58 +3,7 @@
 <head>
 	<title>BMI 計算機</title>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,	initial-scale=1">
-
-	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js">
-	</script>
-
-	<style>
-		body {
-			margin-left: auto;
-			margin-right: auto;
-			background-color: plum;
-		}
-
-		.BMI {
-			padding-left: 100px;
-			padding-top: 20px;
-			margin-left: auto;
-			margin-right: auto;
-			width: 350px;
-		}
-
-		.box {
-			padding-left: 100px;
-			padding-top: 20px;
-			margin-left: auto;
-			margin-right: auto;
-			box-sizing: content-box;
-		}
-	</style>
-
-	<script>
-		$(document).ready(function () {
-			$('#calc').click(function () {
-
-				var h = $('#height').val(),
-					w = $('#weight').val(),
-
-					BMI = w / (h * h);
-
-				if (h == "") {
-					alert("請輸入身高");
-				} else if (w == "") {
-					alert("請輸入體重");
-				}
-
-				$('#result').val(BMI);
-			});
-		});
-	</script>
+	
 </head>
 
 <body>
@@ -63,29 +12,18 @@
 	</div>
 
 	<form>
-
-
-		</div>
-
-
-
-
-
 		<div class="col-md-4 box">
 			<div class="form-group">
 				<label for="height">輸入身高(m)</label>
-				<input type="number" class="form-control" id="height" placeholder="身高">
+				<input type="number" class="form-control" id="height" placeholder="身高" />
 
 
 				<div class="form-group">
 					<label for="weight">輸入體重(kg)</label>
-					<input type="number" class="form-control" id="weight" placeholder="體重">
-
-
+					<input type="number" class="form-control" id="weight" placeholder="體重" />
 					<div class="col-md-1 box"></div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" id="calc">點我看結果</button>
-
 					</div>
 					<div class="form-group">
 						<label for="result">你的BMI是</label>
