--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>BMI 計算機</title>
 
-	
+<head>
+	<style>
+		h1 {
+			font-family: "Brush Script MT", cursive;
+			text-align: center;
+			text-transform: uppercase;
+			color: #4CAF50;
+		}
+
+		div {
+			border: 2px solid black;
+			outline: #4CAF50 solid 10px;
+			margin: auto;
+			padding: 20px;
+			text-align: center;
+		}
+	</style>
 </head>
 
 <body>
 
-	<h1 class="BMI">BMI 計算機</h1>
+	<h1>BMI 計算機</h1>
+
+	<div>世界衛生組織建議以身體質量指數（Body Mass Index, BMI）來衡量肥胖程度，其計算公式是以體重（公斤）除以身高（公尺）的平方。
+		國民健康署建議我國成人BMI應維持在18.5（kg/m2）及24（kg/m2）之間，太瘦、過重或太胖皆有礙健康。
+		研究顯示，體重過重或是肥胖（BMI≧24）為糖尿病、心血管疾病、惡性腫瘤等慢性疾病的主要風險因素；而過瘦的健康問題，則會有營養不良、骨質疏鬆、猝死等健康問題。
+		<a href="http://health99.hpa.gov.tw/onlineQuiz/bmi">健康九九網站 - 衛生福利部國民健康署</a>
 	</div>
 
-	<form>
-		<div class="col-md-4 box">
-			<div class="form-group">
-				<label for="height">輸入身高(m)</label>
-				<input type="number" class="form-control" id="height" placeholder="身高" />
-
-
-				<div class="form-group">
-					<label for="weight">輸入體重(kg)</label>
-					<input type="number" class="form-control" id="weight" placeholder="體重" />
-					<div class="col-md-1 box"></div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary" id="calc">點我看結果</button>
-					</div>
-					<div class="form-group">
-						<label for="result">你的BMI是</label>
-						<input type="number" class="form-control" id="result" readonly="true">
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-
-	</form>
 </body>
 
 </html>
