--- a/index.html
+++ b/index.html
@@ -1,34 +1,95 @@
 <!DOCTYPE html>
 <html>
+<title></title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-	<style>
-		h1 {
-			font-family: "Brush Script MT", cursive;
-			text-align: center;
-			text-transform: uppercase;
-			color: #4CAF50;
-		}
+<script src="../mschiao.github.io/js/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+	crossorigin="anonymous"></script>
 
-		div {
-			border: 2px solid black;
-			outline: #4CAF50 solid 10px;
-			margin: auto;
-			padding: 20px;
-			text-align: center;
-		}
-	</style>
+<style>
+	h1 {
+		font-family: "Brush Script MT", cursive;
+		text-align: center;
+		text-transform: uppercase;
+		color: #4CAF50;
+	}
+
+	.top {
+		border: 2px solid black;
+		outline: #4CAF50 solid 10px;
+		margin: auto;
+		padding: 20px;
+		text-align: center;
+	}
+
+	section {
+		text-align: center;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 100px;
+	}
+</style>
+
+<script>
+	$(function () {
+		$('#calc').click(function () {
+
+			var h = $('#height').val(),
+				w = $('#weight').val(),
+				bmi = w / (h * h);
+			$("#result").val(bmi);
+
+
+
+
+		});
+	});
+</script>
 </head>
 
 <body>
 
 	<h1>BMI 計算機</h1>
 
-	<div>世界衛生組織建議以身體質量指數（Body Mass Index, BMI）來衡量肥胖程度，其計算公式是以體重（公斤）除以身高（公尺）的平方。
+	<div class="top">世界衛生組織建議以身體質量指數（Body Mass Index, BMI）來衡量肥胖程度，其計算公式是以體重（公斤）除以身高（公尺）的平方。
 		國民健康署建議我國成人BMI應維持在18.5（kg/m2）及24（kg/m2）之間，太瘦、過重或太胖皆有礙健康。
 		研究顯示，體重過重或是肥胖（BMI≧24）為糖尿病、心血管疾病、惡性腫瘤等慢性疾病的主要風險因素；而過瘦的健康問題，則會有營養不良、骨質疏鬆、猝死等健康問題。
 		<a href="http://health99.hpa.gov.tw/onlineQuiz/bmi">健康九九網站 - 衛生福利部國民健康署</a>
 	</div>
+
+	<section>
+		<div class="row">
+			<div class="col-md-4 box">
+				<div class="form-group">
+					<label for="height">輸入身高(m)</label>
+					<input type="number" class="form-control" id="height" placeholder="身高">
+				</div>
+			</div>
+			<div class="col-md-4 box">
+				<div class="form-group">
+					<label for="weight">輸入體重(kg)</label>
+					<input type="number" class="form-control" id="weight" placeholder="體重">
+				</div>
+			</div>
+			<div class="col-md-1 button-box">
+				<div class="form-group">
+					<button type="button" id="calc" class="btn btn-success">計算</button>
+				</div>
+			</div>
+			<div class="col-md-3 box">
+
+				<div class="form-group">
+					<label for="result">您的 BMI</label>
+					<input type="number" class="form-control" id="result" readonly="true">
+				</div>
+			</div>
+		</div>
+	</section>
 
 </body>
 
