--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </style>
 
 <script>
-	$(function () {
+	$(document).ready(function () {
 		$('#calc').click(function () {
 
 			var h = $('#height').val(),
