--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <body>
 
-	<h1>BMI 計算機</h1>
+	<h1>BMI & 體脂率計算器</h1>
 
 	<div class="top">世界衛生組織建議以身體質量指數（Body Mass Index, BMI）來衡量肥胖程度，其計算公式是以體重（公斤）除以身高（公尺）的平方。
 		國民健康署建議我國成人BMI應維持在18.5（kg/m2）及24（kg/m2）之間，太瘦、過重或太胖皆有礙健康。
@@ -247,7 +247,7 @@
 					<button type="button" class="btn btn-success" id="calc">計算</button>
 
 					<!-- 清空按鈕 -->
-					<button type="reset" class="btn btn-outline-success" id="reset">清空</button>
+					<button type="reset" class="btn btn-outline-success" id="reset">清除</button>
 				</form>
 			</div>
 
